objects/ConfigIt_Template__c.object
<CustomObject>
    <description>EP R2 R5803/U1428 Object used as row for E-configure templates</description>
    <fields>
        <fullName>Cart_Id__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>ConfigIt Templates</relationshipLabel>
        <relationshipName>ConfigIt_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <formula>ConfigIt_Product__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigIt_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConfigIt Product</label>
        <referenceTo>ConfigIt_Product__c</referenceTo>
        <relationshipLabel>ConfigIt Templates</relationshipLabel>
        <relationshipName>ConfigIt_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConfigIt_Supercode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConfigIt Supercode</label>
        <referenceTo>ConfigIt_Supercode__c</referenceTo>
        <relationshipLabel>ConfigIt Templates</relationshipLabel>
        <relationshipName>ConfigIt_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>ConfigIt_Product__r.Description__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>IF(
ISBLANK(ConfigIt_Product__c) , 
NULL, 
ConfigIt_Product__r.List_Price__c
)</formula>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price_EUR__c</fullName>
        <label>Net Price EUR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>IF(
ISBLANK(ConfigIt_Product__c), 
NULL, 
ConfigIt_Product__r.Net_Price__c 
)</formula>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <formula>ConfigIt_Product__r.Qty__c</formula>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence No</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supercode__c</fullName>
        <formula>ConfigIt_Supercode__r.Supercode__c</formula>
        <label>Supercode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>IF(
OR(
ISBLANK(ConfigIt_Supercode__c),
ISBLANK(ConfigIt_Supercode__r.Supercode__c)
),
IF(
OR(
ISBLANK(ConfigIt_Product__c),
!ISBLANK(ConfigIt_Product__r.ConfigIt_Supercode__r.Supercode__c)
),
NULL,
ConfigIt_Product__r.Total_List_Price__c 
), 
ConfigIt_Supercode__r.Total_List_Price__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Price_EUR__c</fullName>
        <label>Total Net Price EUR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Net_Price__c</fullName>
        <formula>IF(
OR(
ISBLANK(ConfigIt_Supercode__c),
ISBLANK(ConfigIt_Supercode__r.Supercode__c)
),
IF(
OR(
ISBLANK(ConfigIt_Product__c),
!ISBLANK(ConfigIt_Product__r.ConfigIt_Supercode__r.Supercode__c)
),
NULL,
ConfigIt_Product__r.Total_Net_Price__c 
), 
ConfigIt_Supercode__r.Total_Net_Price__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ConfigIt Template</label>
    <nameField>
        <displayFormat>TEMP-{00000}</displayFormat>
        <label>ConfigIt Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConfigIt Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>